<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_height="350dp"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    >
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/LaptopsImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/buy_button_main"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/LaptopsImage"
        android:layout_alignBottom="@id/subTitle"
        android:background="@color/gray"
        android:text="@string/buy"
        android:textAlignment="center"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title_placeholder"
        android:textColor="@color/gray"
        android:backgroundTint="@color/lightgray"
        android:padding="8dp"
        android:layout_below="@id/LaptopsImage"
        style="@style/TextAppearance.AppCompat.Headline"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LaptopsPrice"
        android:text="@string/Laptopsprice"
        android:textStyle="normal"
        android:fontFamily="@font/bold"
        android:padding="8dp"
        android:layout_below="@id/title"
        android:textColor="?android:textColorSecondary"
        style="@style/TextAppearance.AppCompat.Subhead" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subTitle"
        android:text="@string/sports_info_placeholder"
        android:textColor="@color/gray"
        android:padding="8dp"
        android:layout_below="@id/LaptopsPrice"
        style="@style/TextAppearance.AppCompat.Subhead" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/subTitle"/>
</RelativeLayout>
</androidx.cardview.widget.CardView>
